# dumpling

./: .dumplingconf.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  MAINTENANCE.md  README.md  book.toml  datetime_out.sql  datetime_sample.sql  pyproject.toml
.github/workflows/: build-smoke.yml  ci.yml  codeql.yml  docs-pr.yml  docs.yml  platform-compat-latest.yml  platform-compat-matrix.yml  policy-lint.yml  publish.yml  release.yml  tests.yml
docs/src/: SUMMARY.md  ci-guardrails.md  configuration.md  getting-started.md  index.md  releasing.md
scripts/: setup-dev.sh
src/: compressed_input.rs  draft_config.rs  dump_input_detect.rs  dump_input_resolve.rs  faker_dispatch.rs  filter.rs  lint.rs  log_sanitize.rs  main.rs  pg_restore_decode.rs  report.rs  scaffold.rs  scan.rs  seal.rs  settings.rs  sql.rs  transform.rs
