[package]
name = "dumpling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
hmac = "0.12"
getrandom = "0.2"
thiserror = "1"
chrono = { version = "0.4" }
lazy_static = "1"