[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "dumpling-cli"
version = "0.2.0"
description = "Static anonymizer for plain SQL dumps (PostgreSQL, SQLite, SQL Server)."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["postgres", "sqlite", "mssql", "sql", "anonymization", "cli", "rust"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Database",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[tool.maturin]
bindings = "bin"
